fixed text size and spacing for smaller screens of temperature and graph fields

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -519,10 +519,20 @@ body {
         flex-direction: column;
     }
 
+    .cityTemperature header span.city {
+        text-align: center;
+        padding: 2rem;
+    }
+
     .cityTemperature .temp .actualTemp span:first-child {
         font-size: 4.8rem;
         line-height: 5rem;
     }
+
+    .cityTemperature .temp .maxTemp {
+        margin: 0;
+    }
+  
 
     .cityTemperature footer {
         margin-top: 2rem;
@@ -543,7 +553,7 @@ body {
 
     .cityTemperature footer .footer div span,
     .cityTemperature footer .footer div strong {
-        font-size: 3rem;
+        font-size: 2.5rem;
         align-items: flex-start;
         width: 100%;
     }
@@ -565,12 +575,16 @@ body {
         font-size: 2rem;
     }
 
+    .sunTime {
+        gap: 2rem;
+    }
     .sunTime header {
         font-size: 2rem;
     }
 
     .sunTime .chartComponent .timeLine {
         font-size: 2rem;
+        width: 80%;
     }
 
 
